# terminalfarms

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
assets/: crops.toml  upgrades.toml
src/: data.rs  game.rs  lib.rs  main.rs  storage.rs  ui.rs
