[package]
name = "terminalfarms"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.6", features = ["derive"] }
crossterm = "0.29"
directories = "6.0"
ratatui = { version = "0.30", features = ["crossterm_0_29"] }
rusqlite = { version = "0.40", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
toml = "0.9"

[profile.release]
lto = "thin"
strip = true
